NIFI-12102 Fixed deprecation warnings when instantiating primitive types
This closes #7769

Signed-off-by: David Handermann <exceptionfactory@apache.org>
(cherry picked from commit 5405a3b08b8a20c5f65102b684b525a9a4f7c01c)