@@ -35,12 +35,12 @@ public class MetricsService {
     //processor - specific metrics
     public Map<String, Double> getProcessorMetrics(ProcessorStatus status) {
         final Map<String, Double> metrics = new HashMap<>();
-        metrics.put(MetricNames.FLOW_FILES_RECEIVED, new Double(status.getInputCount()));
-        metrics.put(MetricNames.FLOW_FILES_SENT, new Double(status.getOutputCount()));
-        metrics.put(MetricNames.BYTES_READ, new Double(status.getInputBytes()));
-        metrics.put(MetricNames.BYTES_WRITTEN, new Double(status.getOutputBytes()));
-        metrics.put(MetricNames.ACTIVE_THREADS, new Double(status.getActiveThreadCount()));
-        metrics.put(MetricNames.TOTAL_TASK_DURATION, new Double(status.getProcessingNanos()));
+        metrics.put(MetricNames.FLOW_FILES_RECEIVED, Double.valueOf(status.getInputCount()));
+        metrics.put(MetricNames.FLOW_FILES_SENT, Double.valueOf(status.getOutputCount()));
+        metrics.put(MetricNames.BYTES_READ, Double.valueOf(status.getInputBytes()));
+        metrics.put(MetricNames.BYTES_WRITTEN, Double.valueOf(status.getOutputBytes()));
+        metrics.put(MetricNames.ACTIVE_THREADS, Double.valueOf(status.getActiveThreadCount()));
+        metrics.put(MetricNames.TOTAL_TASK_DURATION, Double.valueOf(status.getProcessingNanos()));
         return metrics;
     }
 
@@ -52,26 +52,26 @@ public class MetricsService {
 
     public Map<String, Double> getPortStatusMetrics(PortStatus status){
         final Map<String, Double> metrics = new HashMap<>();
-        metrics.put(MetricNames.ACTIVE_THREADS, new Double(status.getActiveThreadCount()));
-        metrics.put(MetricNames.INPUT_COUNT, new Double(status.getInputCount()));
-        metrics.put(MetricNames.OUTPUT_COUNT, new Double(status.getOutputCount()));
-        metrics.put(MetricNames.INPUT_BYTES, new Double(status.getInputBytes()));
-        metrics.put(MetricNames.OUTPUT_BYTES, new Double(status.getOutputBytes()));
-        metrics.put(MetricNames.FLOW_FILES_RECEIVED, new Double(status.getFlowFilesReceived()));
-        metrics.put(MetricNames.FLOW_FILES_SENT, new Double(status.getFlowFilesSent()));
-        metrics.put(MetricNames.BYTES_RECEIVED, new Double(status.getBytesReceived()));
-        metrics.put(MetricNames.BYTES_SENT, new Double(status.getBytesSent()));
+        metrics.put(MetricNames.ACTIVE_THREADS, Double.valueOf(status.getActiveThreadCount()));
+        metrics.put(MetricNames.INPUT_COUNT, Double.valueOf(status.getInputCount()));
+        metrics.put(MetricNames.OUTPUT_COUNT, Double.valueOf(status.getOutputCount()));
+        metrics.put(MetricNames.INPUT_BYTES, Double.valueOf(status.getInputBytes()));
+        metrics.put(MetricNames.OUTPUT_BYTES, Double.valueOf(status.getOutputBytes()));
+        metrics.put(MetricNames.FLOW_FILES_RECEIVED, Double.valueOf(status.getFlowFilesReceived()));
+        metrics.put(MetricNames.FLOW_FILES_SENT, Double.valueOf(status.getFlowFilesSent()));
+        metrics.put(MetricNames.BYTES_RECEIVED, Double.valueOf(status.getBytesReceived()));
+        metrics.put(MetricNames.BYTES_SENT, Double.valueOf(status.getBytesSent()));
         return metrics;
     }
 
     public Map<String, Double> getConnectionStatusMetrics(ConnectionStatus status) {
         final Map<String, Double> metrics = new HashMap<>();
-        metrics.put(MetricNames.INPUT_COUNT, new Double(status.getInputCount()));
-        metrics.put(MetricNames.INPUT_BYTES, new Double(status.getInputBytes()));
-        metrics.put(MetricNames.QUEUED_COUNT, new Double(status.getQueuedCount()));
-        metrics.put(MetricNames.QUEUED_BYTES, new Double(status.getQueuedBytes()));
-        metrics.put(MetricNames.OUTPUT_COUNT, new Double(status.getOutputCount()));
-        metrics.put(MetricNames.OUTPUT_BYTES, new Double(status.getOutputBytes()));
+        metrics.put(MetricNames.INPUT_COUNT, Double.valueOf(status.getInputCount()));
+        metrics.put(MetricNames.INPUT_BYTES, Double.valueOf(status.getInputBytes()));
+        metrics.put(MetricNames.QUEUED_COUNT, Double.valueOf(status.getQueuedCount()));
+        metrics.put(MetricNames.QUEUED_BYTES, Double.valueOf(status.getQueuedBytes()));
+        metrics.put(MetricNames.OUTPUT_COUNT, Double.valueOf(status.getOutputCount()));
+        metrics.put(MetricNames.OUTPUT_BYTES, Double.valueOf(status.getOutputBytes()));
         return metrics;
     }
 
@@ -79,16 +79,16 @@ public class MetricsService {
     //general metrics for whole dataflow
     public Map<String, Double> getDataFlowMetrics(ProcessGroupStatus status) {
         final Map<String, Double> metrics = new HashMap<>();
-        metrics.put(MetricNames.FLOW_FILES_RECEIVED, new Double(status.getFlowFilesReceived()));
-        metrics.put(MetricNames.BYTES_RECEIVED, new Double(status.getBytesReceived()));
-        metrics.put(MetricNames.FLOW_FILES_SENT, new Double(status.getFlowFilesSent()));
-        metrics.put(MetricNames.BYTES_SENT, new Double(status.getBytesSent()));
-        metrics.put(MetricNames.FLOW_FILES_QUEUED, new Double(status.getQueuedCount()));
-        metrics.put(MetricNames.BYTES_QUEUED, new Double(status.getQueuedContentSize()));
-        metrics.put(MetricNames.BYTES_READ, new Double(status.getBytesRead()));
-        metrics.put(MetricNames.BYTES_WRITTEN, new Double(status.getBytesWritten()));
-        metrics.put(MetricNames.ACTIVE_THREADS, new Double(status.getActiveThreadCount()));
-        metrics.put(MetricNames.TOTAL_TASK_DURATION, new Double(calculateProcessingNanos(status)));
+        metrics.put(MetricNames.FLOW_FILES_RECEIVED, Double.valueOf(status.getFlowFilesReceived()));
+        metrics.put(MetricNames.BYTES_RECEIVED, Double.valueOf(status.getBytesReceived()));
+        metrics.put(MetricNames.FLOW_FILES_SENT, Double.valueOf(status.getFlowFilesSent()));
+        metrics.put(MetricNames.BYTES_SENT, Double.valueOf(status.getBytesSent()));
+        metrics.put(MetricNames.FLOW_FILES_QUEUED, Double.valueOf(status.getQueuedCount()));
+        metrics.put(MetricNames.BYTES_QUEUED, Double.valueOf(status.getQueuedContentSize()));
+        metrics.put(MetricNames.BYTES_READ, Double.valueOf(status.getBytesRead()));
+        metrics.put(MetricNames.BYTES_WRITTEN, Double.valueOf(status.getBytesWritten()));
+        metrics.put(MetricNames.ACTIVE_THREADS, Double.valueOf(status.getActiveThreadCount()));
+        metrics.put(MetricNames.TOTAL_TASK_DURATION, Double.valueOf(calculateProcessingNanos(status)));
         status.getOutputPortStatus();
         return metrics;
     }
@@ -96,28 +96,28 @@ public class MetricsService {
     //virtual machine metrics
     public Map<String, Double> getJVMMetrics(JmxJvmMetrics virtualMachineMetrics) {
         final Map<String, Double> metrics = new HashMap<>();
-        metrics.put(MetricNames.JVM_UPTIME, new Double(virtualMachineMetrics.uptime()));
-        metrics.put(MetricNames.JVM_HEAP_USED, new Double(virtualMachineMetrics.heapUsed(DataUnit.B)));
-        metrics.put(MetricNames.JVM_HEAP_USAGE, new Double(virtualMachineMetrics.heapUsage()));
-        metrics.put(MetricNames.JVM_NON_HEAP_USAGE, new Double(virtualMachineMetrics.nonHeapUsage()));
-        metrics.put(MetricNames.JVM_THREAD_COUNT, new Double(virtualMachineMetrics.threadCount()));
-        metrics.put(MetricNames.JVM_DAEMON_THREAD_COUNT, new Double(virtualMachineMetrics.daemonThreadCount()));
-        metrics.put(MetricNames.JVM_FILE_DESCRIPTOR_USAGE, new Double(virtualMachineMetrics.fileDescriptorUsage()));
+        metrics.put(MetricNames.JVM_UPTIME, Double.valueOf(virtualMachineMetrics.uptime()));
+        metrics.put(MetricNames.JVM_HEAP_USED, Double.valueOf(virtualMachineMetrics.heapUsed(DataUnit.B)));
+        metrics.put(MetricNames.JVM_HEAP_USAGE, Double.valueOf(virtualMachineMetrics.heapUsage()));
+        metrics.put(MetricNames.JVM_NON_HEAP_USAGE, Double.valueOf(virtualMachineMetrics.nonHeapUsage()));
+        metrics.put(MetricNames.JVM_THREAD_COUNT, Double.valueOf(virtualMachineMetrics.threadCount()));
+        metrics.put(MetricNames.JVM_DAEMON_THREAD_COUNT, Double.valueOf(virtualMachineMetrics.daemonThreadCount()));
+        metrics.put(MetricNames.JVM_FILE_DESCRIPTOR_USAGE, Double.valueOf(virtualMachineMetrics.fileDescriptorUsage()));
 
         for (Map.Entry<Thread.State, Double> entry : virtualMachineMetrics.threadStatePercentages().entrySet()) {
             final int normalizedValue = (int) (100 * (entry.getValue() == null ? 0 : entry.getValue()));
             switch (entry.getKey()) {
                 case BLOCKED:
-                    metrics.put(MetricNames.JVM_THREAD_STATES_BLOCKED, new Double(normalizedValue));
+                    metrics.put(MetricNames.JVM_THREAD_STATES_BLOCKED, Double.valueOf(normalizedValue));
                     break;
                 case RUNNABLE:
-                    metrics.put(MetricNames.JVM_THREAD_STATES_RUNNABLE, new Double(normalizedValue));
+                    metrics.put(MetricNames.JVM_THREAD_STATES_RUNNABLE, Double.valueOf(normalizedValue));
                     break;
                 case TERMINATED:
-                    metrics.put(MetricNames.JVM_THREAD_STATES_TERMINATED, new Double(normalizedValue));
+                    metrics.put(MetricNames.JVM_THREAD_STATES_TERMINATED, Double.valueOf(normalizedValue));
                     break;
                 case TIMED_WAITING:
-                    metrics.put(MetricNames.JVM_THREAD_STATES_TIMED_WAITING, new Double(normalizedValue));
+                    metrics.put(MetricNames.JVM_THREAD_STATES_TIMED_WAITING, Double.valueOf(normalizedValue));
                     break;
                 default:
                     break;
@@ -128,8 +128,8 @@ public class MetricsService {
             final String gcName = entry.getKey().replace(" ", "");
             final long runs = entry.getValue().getRuns();
             final long timeMS = entry.getValue().getTime(TimeUnit.MILLISECONDS);
-            metrics.put(MetricNames.JVM_GC_RUNS + "." + gcName,new Double(runs));
-            metrics.put(MetricNames.JVM_GC_TIME + "." + gcName, new Double(timeMS));
+            metrics.put(MetricNames.JVM_GC_RUNS + "." + gcName, Double.valueOf(runs));
+            metrics.put(MetricNames.JVM_GC_TIME + "." + gcName, Double.valueOf(timeMS));
         }
 
         return metrics;
